--- a/adrs/adr-00001.md
+++ b/adrs/adr-00001.md
@@ -18,7 +18,7 @@ We decided to place the signature verification logic in the **application layer*
 This solution aligns with the **Hexagonal Architecture (a.k.a. Ports and Adapters)** style. The signature verification logic serves as an application service (a port), while the concrete mechanism to retrieve the public key (e.g., from a file, keystore, or JWKS endpoint) is modeled as an adapter (via the `PublicKeyResolver` interface).
 
 ### Why not in the domain layer?
-The domain layer should remain pure and agnostic of infrastructure and integration concerns. It must operate on already validated business objects (e.g., `OrderCommand`). Signature verification is a security/integration concern and does not belong in the domain.
+The domain layer should remain pure and agnostic of infrastructure and integration concerns. It must operate on already validated business objects (e.g., `Order`). Signature verification is a security/integration concern and does not belong in the domain.
 
 ### Why not in each adapter (e.g., HTTP, Kafka)?
 Placing signature verification inside each primary adapter would lead to code duplication and increase the risk of inconsistent validation. Instead, adapters delegate the responsibility to the shared `SignatureVerifier`, ensuring consistency and testability.
